# Joker

./: .gitignore  Cargo.toml  README.md  func_block.drawio  未命名绘图.drawio
src/: expr.rs  lib.rs  main.rs
src/backup/joker/: env.rs  interpreter.rs  main.rs  parse.rs  scanner.rs  token.rs
src/idea/: alias.rs  automata.rs  error_manager.rs  interpreter.rs  mod.rs  object_operator.rs  resolve.rs  types.rs
src/idea/resolver/: mod.rs  resolve.rs  store.rs
src/joker/: abort.rs  ast.rs  ast_print.rs  callable.rs  env.rs  error.rs  interpreter.rs  main.rs  mod.rs  native_fun.rs  object.rs  parse.rs  resolver.rs  scanner.rs  token.rs  tools.rs  types.rs
src/joker/ast/: ast.rs  ast_print.rs  aux_fun.rs  display.rs  error.rs  mod.rs
src/joker/error/: error.rs  mod.rs
src/joker/object/: instance.rs  literal.rs  mod.rs  this.rs
src/joker/scanner/: mod.rs  scanner.rs
src/joker_bvm/: Cargo.toml
src/joker_c/: joker_c.sln
test/: assignment.jk  block.jk  block_2.jk  block_3.jk  break.jk  break_2.jk  bytecode_virtual_machine .jk  class.jk  class_getter.jk  class_inherit.jk  class_instance.jk  class_method.jk  class_setter.jk  class_this.jk  closure.jk  comparison.jk  continue.jk  demo.jk  demoparser.jk  equality.jk  expression.jk  factor.jk  for.jk  fun.jk  fun_expand.jk  fun_nest.jk  global.jk  grouping.jk  if.jk  if_logic.jk  interpreter.jk  lambda.jk  local_var_status.jk  logic.jk  primary.jk  return.jk  scanner.jk  term.jk  trinomial.jk  unary.jk  (+2 more)
todo/: control
tools/: expr.rs
tools/src/: build.rs  expr.rs  lib.rs  macro_build.rs  main.rs  stmt.rs
(+95 files in other folders)
