[workspace]
members = [ 
    # "src/joker_bvm",        # run sub-project joker_bvm: cargo run -p joker_bvm
    "tools"                 # run sub-project tools: cargo run -p tools
]
[package]
name = "joker"
version = "0.1.0"
edition = "2021"
authors = ["redskaber@foxmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tools = { path = "tools" }
# joker_bvm = { path = "src/joker_bvm" }

